...
    android:layout_height="match_parent"
    android:background="@color/grey_bg_main"
    tools:context=".ui.profile.ProfileFragment">

    <!--    img user-->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_watermark"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/img_watermark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    tv login-->
    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/user_name"
        android:textColor="@color/grey_tv"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/nounique"
        app:layout_constraintStart_toStartOf="@+id/img_watermark"
        app:layout_constraintTop_toBottomOf="@+id/fullname" />

    <!--tv id-->
    <TextView
        android:id="@+id/nounique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username">

        <!-- ic company-->
        <ImageView
            android:id="@+id/company_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/company"
            app:srcCompat="@drawable/ic_briefcase" />

        <!-- tv Company -->
        <TextView
            android:id="@+id/company"
            android:layout_width="0dp"
...
            android:text="@string/companyValue"
            android:textColor="@color/grey_tv"
            android:textSize="18sp" />

        <!-- ic Location -->
        <ImageView
            android:id="@+id/location_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/location"
            app:srcCompat="@drawable/ic_placeholder" />

        <!--tv location-->
        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
...
            android:text="@string/locationValue"
            android:textColor="@color/grey_tv"
            android:textSize="18sp" />

        <!-- ic repository-->
        <ImageView
            android:id="@+id/repository_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/repository"
            app:srcCompat="@drawable/ic_archive" />

        <!--tv repository-->
        <TextView
            android:id="@+id/repository"
            android:layout_width="wrap_content"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <!-- Icon Follower -->
    <ImageView
        android:id="@+id/follower_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/follower"
        android:src="@drawable/ic_add_user"
        app:layout_constraintBottom_toBottomOf="@id/information_box"
        app:layout_constraintStart_toStartOf="@id/information_box"
        app:layout_constraintTop_toTopOf="@id/information_box" />

    <!-- tv Follower -->
...
        app:layout_constraintBottom_toBottomOf="@+id/information_box"
        app:layout_constraintStart_toEndOf="@+id/follower_img"
        app:layout_constraintTop_toTopOf="@+id/information_box" />

    <!-- Follower value -->
    <TextView
        android:id="@+id/follower_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/followerValue"
        android:textColor="@color/grey_tv"
...
        app:layout_constraintBottom_toBottomOf="@id/information_box"
        app:layout_constraintStart_toEndOf="@+id/follower"
        app:layout_constraintTop_toTopOf="@id/information_box" />

    <!-- Icon Following -->
    <ImageView
        android:id="@+id/following_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/following"
        android:src="@drawable/ic_have_user"
        app:layout_constraintBottom_toBottomOf="@id/information_box"
        app:layout_constraintEnd_toStartOf="@+id/following"
        app:layout_constraintTop_toTopOf="@id/information_box" />

    <!-- tv Following -->
...
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/following"
        android:textColor="@color/grey_tv"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/information_box"
        app:layout_constraintEnd_toStartOf="@+id/following_value"
        app:layout_constraintTop_toTopOf="@+id/information_box" />

    <!-- Following Number -->
    <TextView
        android:id="@+id/following_value"
        android:layout_width="wrap_content"
...
