<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_bg_main"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/fab_favorites"
            android:elevation="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_favorite_true"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription"
            app:layout_constraintBottom_toBottomOf="@+id/image_poster"
            app:layout_constraintEnd_toEndOf="@+id/image_poster"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@+id/image_poster"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/image_poster"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/poster_tvshow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_title_tvshow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_episode"
            tools:text="@string/title_tvShow" />

        <TextView
            android:id="@+id/text_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/background"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="start"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textColor="@color/grey_tv"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_poster"
            tools:text="@string/episode" />

        <Button
            android:id="@+id/btn_start_tvshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/text_title_tvshow"
            app:layout_constraintTop_toBottomOf="@+id/text_title_tvshow" />

        <TextView
            android:id="@+id/text_desc_tvshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/description_tvshow"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/btn_start_tvshow"
            app:layout_constraintTop_toBottomOf="@+id/btn_start_tvshow" />

        <TextView
            android:id="@+id/text_description_tvshow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/grey_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_desc_tvshow"
            app:layout_constraintTop_toBottomOf="@+id/text_desc_tvshow"
            tools:text="@string/description_tvshow_value" />

        <TextView
            android:id="@+id/text_list_module_tvshow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/list_tvshow"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_description_tvshow" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_module"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_list_module_tvshow"
            tools:listitem="@layout/items_module_list" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/rv_module"
            app:layout_constraintEnd_toEndOf="@+id/rv_module"
            app:layout_constraintStart_toStartOf="@+id/rv_module"
            app:layout_constraintTop_toTopOf="@+id/rv_module"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>