...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_title_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_duration_movie"
            tools:text="@string/title_movie" />

        <TextView
            android:id="@+id/text_duration_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_poster"
            tools:text="@string/duration_movie" />

        <Button
            android:id="@+id/btn_start_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/start"
...
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/text_title_movie"
            app:layout_constraintTop_toBottomOf="@+id/text_title_movie" />

        <TextView
            android:id="@+id/text_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/description_movies"
            android:textColor="@color/white"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/btn_start_movie"
            app:layout_constraintTop_toBottomOf="@+id/btn_start_movie" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/grey_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_desc"
            app:layout_constraintTop_toBottomOf="@+id/text_desc"
            tools:text="@string/description_movies_value" />

        <TextView
            android:id="@+id/text_list_module_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/list_movie"
...
